// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers config should update config 1`] = `
Object {
  "config": Object {
    "avatarUrlTemplate": "avatar",
    "notificationsDatabaseId": "notifications_database",
    "settingsDatabaseId": "settings_database",
    "source": "disk",
  },
  "filter": null,
  "notifications": Object {
    "countOfServicesWithNotifications": 0,
    "notifications": Array [],
  },
  "notificationsFetched": false,
  "notificationsSettingsEnabled": true,
  "popupState": false,
  "rpc": null,
  "services": Array [],
  "unviewed": 0,
}
`;

exports[`reducers filter should update filter 1`] = `
Object {
  "config": Object {},
  "filter": "ppid",
  "notifications": Object {
    "countOfServicesWithNotifications": 0,
    "notifications": Array [],
  },
  "notificationsFetched": false,
  "notificationsSettingsEnabled": true,
  "popupState": false,
  "rpc": null,
  "services": Array [],
  "unviewed": 0,
}
`;

exports[`reducers notifications should set notifications 1`] = `
Object {
  "config": Object {},
  "filter": null,
  "notifications": Object {
    "notifications": Array [
      Object {
        "mtime": 1700,
        "recordId": "1",
      },
    ],
  },
  "notificationsFetched": true,
  "notificationsSettingsEnabled": true,
  "popupState": false,
  "rpc": null,
  "services": Array [],
  "unviewed": 0,
}
`;

exports[`reducers notifications should update notification 1`] = `
Object {
  "config": Object {},
  "filter": null,
  "notifications": Object {
    "notifications": Array [
      Object {
        "mtime": 1701,
        "recordId": "1",
      },
    ],
  },
  "notificationsFetched": true,
  "notificationsSettingsEnabled": true,
  "popupState": false,
  "rpc": null,
  "services": Array [],
  "unviewed": 0,
}
`;

exports[`reducers notificationsSettingsEnable should update notificationsSettingsEnabled 1`] = `
Object {
  "config": Object {},
  "filter": null,
  "notifications": Object {
    "countOfServicesWithNotifications": 0,
    "notifications": Array [],
  },
  "notificationsFetched": false,
  "notificationsSettingsEnabled": false,
  "popupState": false,
  "rpc": null,
  "services": Array [],
  "unviewed": 0,
}
`;

exports[`reducers rpc should not update rpc 1`] = `
Object {
  "config": Object {},
  "filter": null,
  "notifications": Object {
    "countOfServicesWithNotifications": 0,
    "notifications": Array [],
  },
  "notificationsFetched": false,
  "notificationsSettingsEnabled": true,
  "popupState": false,
  "rpc": null,
  "services": Array [],
  "unviewed": 0,
}
`;

exports[`reducers rpc should update rpc 1`] = `
Object {
  "config": Object {},
  "filter": null,
  "notifications": Object {
    "countOfServicesWithNotifications": 0,
    "notifications": Array [],
  },
  "notificationsFetched": false,
  "notificationsSettingsEnabled": true,
  "popupState": false,
  "rpc": 5,
  "services": Array [],
  "unviewed": 0,
}
`;

exports[`reducers services should rewrite services 1`] = `
Object {
  "config": Object {},
  "filter": null,
  "notifications": Object {
    "countOfServicesWithNotifications": 0,
    "notifications": Array [],
  },
  "notificationsFetched": false,
  "notificationsSettingsEnabled": true,
  "popupState": false,
  "rpc": null,
  "services": Array [
    Object {
      "name": "YandexDrive",
    },
  ],
  "unviewed": 0,
}
`;

exports[`reducers services should update service settings 1`] = `
Object {
  "config": Object {},
  "filter": null,
  "notifications": Object {
    "countOfServicesWithNotifications": 0,
    "notifications": Array [],
  },
  "notificationsFetched": false,
  "notificationsSettingsEnabled": true,
  "popupState": false,
  "rpc": null,
  "services": Array [
    Object {
      "name": "Диск",
      "recordId": "disk",
      "settings": Object {
        "fine": Object {
          "enabled": true,
        },
      },
    },
    Object {
      "name": "Драйв",
      "recordId": "drive",
      "settings": Object {
        "fine": Object {
          "enabled": true,
        },
      },
    },
  ],
  "unviewed": 0,
}
`;

exports[`reducers services should update services 1`] = `
Object {
  "config": Object {},
  "filter": null,
  "notifications": Object {
    "countOfServicesWithNotifications": 0,
    "notifications": Array [],
  },
  "notificationsFetched": false,
  "notificationsSettingsEnabled": true,
  "popupState": false,
  "rpc": null,
  "services": Array [
    Object {
      "name": "Диск",
      "recordId": "disk",
      "settings": Object {
        "fine": Object {
          "enabled": true,
        },
      },
    },
    Object {
      "name": "Драйв",
      "recordId": "drive",
      "settings": Object {
        "fine": Object {
          "enabled": false,
        },
      },
    },
  ],
  "unviewed": 0,
}
`;

exports[`reducers unviewed should update unviewed 1`] = `
Object {
  "config": Object {},
  "filter": null,
  "notifications": Object {
    "countOfServicesWithNotifications": 0,
    "notifications": Array [],
  },
  "notificationsFetched": false,
  "notificationsSettingsEnabled": true,
  "popupState": false,
  "rpc": null,
  "services": Array [],
  "unviewed": 1,
}
`;
